--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="d-flex container-fluid">
                     <button class="btn btn-success mt-3"><i class="bi bi-envelope-at"></i><a href="mailto:sandymoo1523@gmail.com" class="text-decoration-none text-white"> Hire me</a></button>
-                    <a class=" mt-4 ms-2 see text-danger" href="#contact">See Portfolio</a>
+                    <a class=" mt-4 ms-2 see text-danger" href="https://www.canva.com/design/DAGhQdD_F2g/Yhb3CrrABU_Wg9a1k7--FQ/edit " target="_blank">My Resume</a>
                 </div>
                 <p class="container-fluid mt-4">
                     <i class="bi bi-text-paragraph"></i>
